Prevent line break in category/meter name

--- a/client/app/styles/_categories.scss
+++ b/client/app/styles/_categories.scss
@@ -75,6 +75,7 @@ ol, ul {
   .tree-level-bottom {
     font-size: 12px;
     margin-left: 10px;
+    white-space: nowrap;
 
     a {
       color: #3e3e3e;
